Fixed z-index of notifications

--- a/resources/sass/all.scss
+++ b/resources/sass/all.scss
@@ -220,7 +220,7 @@ html {
 
     .notify-dialog {
       background-color: #404040;
-      z-index: 10;
+      z-index: 1000;
       color: #FFF;
       border-radius: 3px;
       padding: 15px;
